# pyxme

./: .gitignore  README.md  pyproject.toml
pyxme/: main.py
tests/: test_pyxme.py
