[project]
name = "pyxme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "scipy>=1.16.2",
]

[project.scripts]
pyxme = "pyxme.main:main"

[dependencies-group]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pyxme"]
